fix spacing issue

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -155,9 +155,6 @@ section {
         color: $deepBlue;
       }
     }
-    .portfolioImage {
-      width: 90%;
-    }
     p {
       font-weight: 300;
       margin-top: -5px;
